--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Project: Cheaper Projects
-Author: David Michael Nelson (davidmichael.nelson@gmail.com)
+Author: David Michael Nelson (davidmichael.nelson -at- gmail -dot- com)
 
-Projects meant to find the cheapest plane tickets in Brazil, looking fir specific week days within a given period.
+Projects meant to find the cheapest plane tickets in Brazil, looking forr specific week days within a given period.
 
 
