Adding more information to README file

--- a/README
+++ b/README
@@ -1,6 +1,13 @@
 Project: Cheaper Projects
 Author: David Michael Nelson (davidmichael.nelson -at- gmail -dot- com)
 
-Projects meant to find the cheapest plane tickets in Brazil, looking forr specific week days within a given period.
+Project meant to find the cheapest plane tickets in Brazil, 
+looking for specific week days within a given period.
 
+----------------------------
 
+TECH STACK:
+
+Language: Groovy
+Build tool: Gradle
+Dependencies: Spock (Testing), Commons logging, Log4J (Optional), Groovy Http-builder
